--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
+    "framer-motion": "^11.1.7",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
