--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
+    "clsx": "^2.1.1",
+    "embla-carousel": "^8.0.2",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
