--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.373.0",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +42,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
